# Scotty

./: . shortcut to gslide plots.lnk  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CartesianConverter.py  FindPsiBeam.py  FindPsiBeam2.py  FindPsiBeam4.py  PlotAllLocalisationLog.py  PlotPsiBC.py  PlotPsiBC2.py  README.md  Scotty_B_derivative_test.py  Scotty_OMFITsave_test.py  Scotty_beam_me_up.py  Scotty_beam_me_up2.py  Scotty_beam_me_up_CART - DETAILED.py  Scotty_beam_me_up_CART.py  Scotty_check_ModeConversion.py  Scotty_compare_plot.py  Scotty_debugging.py  Scotty_file_processing_CART.py  Scotty_find_entry_point_CART.py  Scotty_fun.py  Scotty_fun_CFD.py  Scotty_fun_CFD_CART.py  Scotty_fun_FFD.py  Scotty_fun_FFD_CART.py  Scotty_fun_evolution.py  Scotty_fun_evolution_CART.py  Scotty_fun_general.py  Scotty_fun_general_CART.py  Scotty_fun_mix.py  Scotty_init_bruv.py  Scotty_main.py  Scotty_main1.py  Scotty_main2.py  Scotty_main3.py  Scotty_main4.py  Scotty_main5.py  (+325 more)
Deprecated/: FindPsiBeam2.py  FindPsiBeam3.py  Localisation.py  Localisation2.py  Localisation3.py  Readme.txt  Scotty_beam_me_up_deprecated.py  Scotty_beam_us_up.py  Scotty_chamber.jl  Scotty_plot.py  Scotty_plot2.py  Scotty_plot2_pretty.py  Scotty_plot3.py  Scotty_postmortem.py  hornpy_old.py
Examples/: SPARC_Multiprocessing_sweep.py  Scotty_main.py  Scotty_main_DIII-D_240.py  Scotty_main_DIII-D_240_170672.py  Scotty_main_DIII-D_240_188839.py  Scotty_main_JT60SA.py  Scotty_main_MAST-U_UCLA.py  Scotty_main_OMFIT.py  Scotty_main_circularFluxSurfaces.py  Scotty_main_sweep.py  Scotty_main_sweep_CPS_Jon.py  Scotty_main_sweep_DIII-D_240 (oxtpwtlap06's conflicted copy 2022-04-25).py  Scotty_main_sweep_DIII-D_240.py  Scotty_main_sweep_DIII-D_240_1 (oxtpwtlap06's conflicted copy 2022-04-25).py  Scotty_main_sweep_DIII-D_240_1.py  Scotty_main_sweep_DIII-D_240_170672.py  Scotty_main_sweep_DIII-D_240_188839.py  Scotty_main_sweep_DIII-D_240_188839_beam.py  Scotty_main_sweep_DIII-D_240_188839_largerWidths.py  Scotty_main_sweep_DIII-D_240_188839_smallerWidths.py  Scotty_main_sweep_JT60SA.py  Scotty_main_sweep_JT60SA_alt.py  Scotty_main_sweep_MAST-U_45177.py  Scotty_main_sweep_circularFluxSurfaces.py  Scotty_main_sweep_parallel.py  Scotty_main_sweep_shotgroup1_O_data.py  Scotty_main_sweep_shotgroup1_X_data.py  Scotty_main_sweep_shotgroup1_polyfit.py  Scotty_main_sweep_shotgroup1_polyfit_beam.py  Scotty_main_sweep_shotgroup2_data.py  Scotty_main_sweep_shotgroup2_data_beam.py  Scotty_main_sweep_shotgroup2_data_ray.py  Scotty_main_sweep_shotgroup3_data.py  Scotty_main_sweep_shotgroup3_data_ray.py  Scotty_main_sweep_shotgroup6_X_data.py  Scotty_main_sweep_shotgroup6_X_data_ray.py  plot.py  temp.py
GUI/: scottypygui.py
Handbook/: requirements.txt
MAST_Mismatch/: PlotMismatch.py  data_DBS.npz  data_mismatch.npz  tmp31lkzgns  tmp3uck4fe6  tmp4rcazbmu  tmp7ddf11s3  tmp7r9g7nd3  tmp84pbqbu0  tmp8elscvf6  tmp8sxj_0o1  tmp_djdo3lf  tmpa1vhbobm  tmpalzvqbol  tmpcidl6aaz  tmpfj67vee1  tmpsanzroj3  tmpsc0c83bf  tmpuaiea58_  tmpvf7yqnd3  tmpwysww2zx  tmpxybw6sr9  tmpzu1ze7kr
Output/: analysis_output.npz  data_input.npz  data_output.npz  solver_output.npz
Preprocessing/: ne_fit_radialcoord.py  plotTopfile.py  (+4 more)
(+4805 files in other folders)
